# career_time

./: .gitignore  NOTES.md  README.md  TODO.md  pyproject.toml
data/: input_urls.txt  sample_profile.json
src/career_time/: data_providers.py  experience.py  linkedin_parser.py  main.py
